# little-usb

./: .gitattributes  .gitignore  CMakeLists.txt  arm-toolchain.cmake
CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
app/: air_mouse.c  air_mouse.h  main.c  systeminit.c
boards/: stm32f407_discovery.c
drivers/boards/: stm32f407_discovery.c  stm32f407_discovery.h
drivers/peripherals/: lis3dsh.c  lis3dsh.h
drivers/stm/: usb_stm32f407.c  usb_stm32f407.h
helpers/: arithmetic.h  logger.c  logger.h
middleware/: accelerometer.h  button.h  usb_descriptors.c  usb_descriptors.h  usb_device.h  usb_framework.c  usb_framework.h  usb_hw_interface.h  usb_standards.h
middleware/hid/: usb_hid.h  usb_hid_standards.h
targets/stm32f407vgtx/: startup_stm32f407vgtx.s
